Make Upload package button correct color and full width on narrow screen

--- a/apps/cyberstorm-remix/app/c/Community.css
+++ b/apps/cyberstorm-remix/app/c/Community.css
@@ -222,6 +222,10 @@
     .community__game-icon {
       display: none;
     }
+
+    .community__upload-button {
+      width: 100%;
+    }
   }
 
   @media (width <= 48rem) {
